# openStar

./: .gitignore  README.md
icore-agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  test_e2e.py  test_intent_v2.py
icore-agent-web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
icore-agent-web/src/: main.js  style.css  theme.js
icore-agent-web/src/api/: agent.js
icore-agent-web/src/components/: AgentCard.vue  AppNavbar.vue  ChatPanel.vue  HomeSidebar.vue  SearchBar.vue  SidebarFooterControls.vue  ThemeToggle.vue  ToolCard.vue
icore-agent-web/src/i18n/: index.js
icore-agent-web/src/locales/: en-US.js  zh-CN.js
icore-agent/scripts/: test_chat.py
icore-agent/src/icore_agent/: __init__.py  main.py
icore-agent/src/icore_agent/api/middleware/: auth.py
icore-agent/src/icore_agent/api/routers/: agent.py  health.py  knowledge.py
icore-agent/src/icore_agent/config/: settings.py
icore-agent/src/icore_agent/engine/: __init__.py  callback_ctx.py  orchestrator.py
icore-agent/src/icore_agent/engine/agents/: __init__.py  code.py  data.py  image.py  knowledge.py  research.py
icore-agent/src/icore_agent/engine/sequential/: __init__.py  agent.py  environment.py
icore-agent/src/icore_agent/memory/: attachment_store.py  chroma_store.py  conversation.py
icore-agent/src/icore_agent/tools/: __init__.py  chroma_search.py  code_executor.py  fetch_webpage.py  file_ops.py  http_client.py  image_tools.py  web_search.py
icore-agent/tests/: test_orchestrator.py  test_sequential.py
(+2 files in other folders)
